tests/kyverno/disallow-latest/resources/pod-fixed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-fixed
spec:
  containers:
    - name: app
      image: nginx:1.25.4
