tests/kyverno/disallow-latest/resources/pod-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-latest
spec:
  containers:
    - name: app
      image: nginx:latest
